--- a/README.org
+++ b/README.org
@@ -6,13 +6,15 @@ GFortran を想定.
 - ~src/~ のコードをコピペしてください.
 - (基本的に私が Fortran で AtCoder([[https://atcoder.jp/]]) に挑むためのコード類なので, どこになにがあるかが分かりづらいと思います...)
 ** 何がある?
+よく使うものも全く使わないものもゴチャ混ぜ.
 *** utilities
 便利になりそうな関数とかユーザ定義型たち.
+座標圧縮と拡張ユークリッドの互除法はたまによく使う.
 **** swap
-コピペするよりも自分で書いた速そう.
+コピペするよりも自分で書いた早い.
 **** is_sorted
 使ったことない...
-**** 座標圧縮()
+**** 座標圧縮(compress)
 Ordered Map の変わりに使ったり...
 ~binary_search_m~ と ~merge_sort_m~ が必要.
 - =integer(int32)= にしか対応していない.
@@ -22,9 +24,10 @@ mod M の下での逆元を求めたりとか...
 - 分類は ~math~ の方では?
   + 更に言うと, 型 ~modint~ の中にあるべきでは?
 **** polymorphic class(*)
-なにこれ...
+よくわからない.
 多分消す.
 *** sorting
+安定ソートな merge-sort だけよく使う.
 **** insertion-sort, selection-sort, bubble-sort
 とりあえず作ってみたやつら.
 O(N^2) だから役には立たない.
@@ -40,6 +43,8 @@ O(NK) 安定ソート.
 unwrapped_vector_m が必要.
 内部では 0から9でのバケットソートでソートしているが, 0から2^4-1でのバケットソートにした方が除算と桁数K的に速くなるかもしれない.
 *** search
+あんまり使わない.
+自分で書いた方が早いかも.
 **** binary_search
 二分探索する...
 **** lower_bound
@@ -49,6 +54,8 @@ unwrapped_vector_m が必要.
 *** math
 とくになし
 *** data structure
+可変長配列, キュー, 優先度付きキュー, 両端キュー, BITは(たまに)よく使う.
+B木は今は int32 にのみ対応, 使えるかもしれない.
 **** Comparable
 比較可能な型.
 使っていない.
@@ -92,7 +99,7 @@ Fortran で C++ の cout を再現したかった.
 **** binary_indexed_tree(Fenwick Tree)
 数列の区間和を O(logN)で求めることができる.
 ** コードの生成
-名前はC++とかRustを参考にしている.
+名前は C++ や Rust を参考.
 - Emacs の org-babel, tangle, Noweb を使って, 変数や Noweb のマクロを使った Fortran コードを展開します.
 ** [0/2] TODO
 *** TODO [0/5] 色々追加する.
@@ -112,8 +119,12 @@ unwrapped vector を削除する?
 ***** TODO 遅延Segment Tree の 実装したい
 *** TODO [0/2] 分かりやすくする.
 **** TODO コードの整理をする.
-テキトーに追加してたので分類が雑.
-GFortran のコンパイルオプション -cpp は AtCoder の提出環境では付いていないので, -cpp に依存しないコードを目指す.
+- 思い付いた順番で追加してたので分類が雑.
+- GFortran のコンパイルオプション -cpp は AtCoder の提出環境では付いていないので, -cpp に依存しないコードを目指す.
+  エラーを module の上に伝播させて, そこでエラー処理した方が良いかもしれない.
+- コードのテストを小さく分割しないとPDFの1ページにコードが収まらない.
 **** TODO ドキュメントを書く.
 - ドキュメントに一貫性を持たせる.
+  コメントも日本語で良いかも.
+  コメント要るのか検討する.
 - Fortran の assumed shape array 辺りを考慮にいれていないので, それをなんとかするべきかを検討する.
