--- a/Implementations.org
+++ b/Implementations.org
@@ -9,6 +9,7 @@
 * emacs-lisp
 ** org babel settings
 Modify org-babel function to avoid adding ~program...end program~ around ~module...end module~.
+#+name: set-fortran-wrap
 #+begin_src emacs-lisp :exports code
   (defun org-babel-fortran-ensure-main-wrap (body params)
     "Wrap body in a \"program ... end program\" block if none exists."
@@ -20,8 +21,9 @@ Modify org-babel function to avoid adding ~program...end program~ around ~module
       (format "program main\n%s\nend program main\n" body)))
   ;; reference: https://stackoverflow.com/questions/40033843/show-the-name-of-a-code-block-in-org-mode-when-export.
   (customize-set-variable 'org-babel-exp-code-template
-                          "#+CAPTION: %name label:%name\n#+ATTR_LaTeX: :placement [H] :float t :options label=%name\n#+BEGIN_SRC %lang%switches%flags\n%body\n#+END_SRC")
+                          "#+CAPTION: %name(%lang) label:%name\n#+ATTR_LaTeX: :placement [H] :float t\n#+BEGIN_SRC %lang%switches%flags\n%body\n#+END_SRC")
 #+end_src
+#+name: disabled_org-confirm-babel-evaluate
 #+begin_src emacs-lisp :exports code :results output :cache yes
   (customize-set-variable 'org-confirm-babel-evaluate nil)
 #+end_src
@@ -4822,6 +4824,7 @@ The function successor returns a pointer to the node whose next larger value.
 
   end module tree_int_m
 #+end_src
+
 ** B-Tree
 *** B木
 Rustに習ってB木を実装する.
