--- a/Implementations.org
+++ b/Implementations.org
@@ -2224,6 +2224,20 @@ The definition of either ==== or =/== must be overridden.
 
 #+RESULTS[d6ff89889b87909e33444adf30a2eeb71bd211a9]: test-tuple2
 
+**** Tuple2のunwrapped_vector
+#+name: tuple2-unwrapped-module
+#+begin_src fortran :exports code :tangle "src/tuple2_unwrapped_vector_m.F90" :comment link :noweb no-export
+  module tuple2_unwrapped_vector_m
+    use, intrinsic :: iso_fortran_env
+    use tuple2_m
+    implicit none
+    <<declaration-unwrapped_vector-var(type="type", type_kind="tuple2_int32_int32")>>
+    <<declaration-unwrapped_vector-var(type="type", type_kind="tuple2_int64_int64")>>
+  contains
+    <<procedures-unwrapped_vector-var(type="type", type_kind="tuple2_int32_int32")>>
+    <<procedures-unwrapped_vector-var(type="type", type_kind="tuple2_int64_int64")>>
+  end module tuple2_unwrapped_vector_m
+#+end_src
 **** Tuple2のpriority_queue
 #+name: tuple2-priority_queue-module
 #+begin_src fortran :exports code :tangle "src/tuple2_priority_queue_m.F90" :comment link :noweb no-export
@@ -2511,6 +2525,20 @@ The definition of either ==== or =/== must be overridden.
 #+end_src
 
 #+RESULTS[dd3d26909f4b23a4e97114ec4e76bc094ff5f3ea]: test-tuple3
+**** Tuple3のunwrapped_vector
+#+name: tuple3-unwrapped_vector-module
+#+begin_src fortran :exports code :tangle "src/tuple3_unwrapped_vector_m.F90" :comment link :noweb no-export
+  module tuple3_unwrapped_vector_m
+    use, intrinsic :: iso_fortran_env
+    use tuple3_m
+    implicit none
+    <<declaration-unwrapped_vector-var(type="type", type_kind="tuple3_int32_int32_int32")>>
+    <<declaration-unwrapped_vector-var(type="type", type_kind="tuple3_int64_int64_int64")>>
+  contains
+    <<procedures-unwrapped_vector-var(type="type", type_kind="tuple3_int32_int32_int32")>>
+    <<procedures-unwrapped_vector-var(type="type", type_kind="tuple3_int64_int64_int64")>>
+  end module tuple3_unwrapped_vector_m
+#+end_src
 **** Tuple3のpriority_queue
 #+name: tuple3-priority_queue-module
 #+begin_src fortran :exports code :tangle "src/tuple3_priority_queue_m.F90" :comment link :noweb no-export
@@ -2780,8 +2808,10 @@ Variables like ${variable} are expanded by bash.
      integer(int32) :: size_ = 0, capa_ = 0
    contains
      procedure, pass :: init      => init_${uwvec}
-     procedure, pass :: push_back_${uwvec}, push_back_array_${uwvec}
-     generic         :: push_back => push_back_${uwvec}, push_back_array_${uwvec}
+     procedure, pass :: push_back_${uwvec}, &
+          push_back_array_${uwvec}
+     generic         :: push_back => push_back_${uwvec}, &
+          push_back_array_${uwvec}
      procedure, pass :: pop_back  => pop_back_${uwvec}
      procedure, pass :: back      => back_${uwvec}
      procedure, pass :: size      => size_${uwvec}
@@ -2959,6 +2989,10 @@ Variables like ${variable} are expanded by bash.
       "character")
           type="character"
           suffix="character"
+          ;;
+      "type")
+          type="type(${type_kind})"
+          suffix="${type_kind}"
           ;;
       ,*)
           type="${type}(${type_kind})"
